--- a/index.html
+++ b/index.html
@@ -106,11 +106,28 @@
   <!-- Kontak -->
   <section id="kontak" class="py-20 bg-white text-center">
     <h3 class="text-4xl font-extrabold text-red-600 mb-6">Hubungi Kami</h3>
-    <p class="text-gray-700 mb-6">Pesan sekarang via WhatsApp atau sosial media kami.</p>
-    <div class="flex justify-center space-x-8">
-      <a href="https://wa.me/6281234567890" target="_blank" class="text-green-500 text-4xl hover:scale-125 transition"><i class="fab fa-whatsapp"></i></a>
-      <a href="#" class="text-pink-500 text-4xl hover:scale-125 transition"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="text-blue-500 text-4xl hover:scale-125 transition"><i class="fab fa-facebook"></i></a>
+    <p class="text-gray-700 mb-6">Pesan sekarang via WhatsApp atau kunjungi lokasi kami.</p>
+
+    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10 px-6">
+      <!-- Map / Gambar Lokasi -->
+      <div class="overflow-hidden rounded-lg shadow-lg">
+        <img src="https://maps.googleapis.com/maps/api/staticmap?center=Banyuwangi&zoom=15&size=600x400&markers=color:red|Banyuwangi" alt="Lokasi Tahu Walik" class="w-full h-full object-cover">
+      </div>
+
+      <!-- Info Alamat -->
+      <div class="flex flex-col items-center justify-center text-left">
+        <h4 class="text-2xl font-bold mb-4 text-red-600">Alamat</h4>
+        <p class="text-gray-700 leading-relaxed mb-6">
+          Jl. Sudirman No. 45<br>
+          Banyuwangi, Jawa Timur<br>
+          Indonesia
+        </p>
+        <div class="flex space-x-8">
+          <a href="https://wa.me/6281234567890" target="_blank" class="text-green-500 text-4xl hover:scale-125 transition"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" class="text-pink-500 text-4xl hover:scale-125 transition"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-blue-500 text-4xl hover:scale-125 transition"><i class="fab fa-facebook"></i></a>
+        </div>
+      </div>
     </div>
   </section>
 
