--- a/index.html
+++ b/index.html
@@ -185,19 +185,26 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="section-pad relative">
-    <div class="max-w-7xl mx-auto px-6 lg:px-8">
-      <div class="grid lg:grid-cols-2 gap-10 items-center">
-        <!-- Map -->
-        <div class="reveal-up">
-          <div class="rounded-2xl overflow-hidden shadow-2xl border border-white/10">
-            <iframe
-              title="Lokasi Tahu Walik"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.402296710445!2d114.367!3d-8.165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd14fc70b3d7b2f%3A0x0!2sBanyuwangi!5e0!3m2!1sid!2sid!4v1700000000000"
-              width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+ <!-- ========= Contact Section ========= -->
+<section id="contact" class="section-pad">
+  <div class="container">
+    <h2 class="section-title">Kontak Kami</h2>
+    <div class="contact-info card-glass reveal-up">
+      <h3>Alamat</h3>
+      <p>
+        Universitas Airlangga Kampus B<br>
+        Jl. Airlangga No.4 - 6, Airlangga,<br>
+        Kec. Gubeng, Kota SBY,<br>
+        Jawa Timur 60115
+      </p>
+        <!-- Google Maps Embed -->
+      <div class="map-container" style="margin-top:1rem; border-radius:1rem; overflow:hidden;">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.012194581693!2d112.75208797499678!3d-7.275591971244889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fa11c09e2e27%3A0x5ce9d3f4042afe7b!2sUniversitas%20Airlangga%20-%20Kampus%20B!5e0!3m2!1sid!2sid!4v1697441234567!5m2!1sid!2sid" 
+          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
         </div>
 
         <!-- Info -->
@@ -250,3 +257,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
