--- a/index.html
+++ b/index.html
@@ -185,61 +185,56 @@
     </div>
   </section>
 
- <!-- ========= Contact Section ========= -->
-<section id="contact" class="section-pad">
-  <div class="container">
-    <h2 class="section-title">Kontak Kami</h2>
-    <div class="contact-info card-glass reveal-up">
-      <h3>Alamat</h3>
-      <p>
-        Universitas Airlangga Kampus B<br>
-        Jl. Airlangga No.4 - 6, Airlangga,<br>
-        Kec. Gubeng, Kota SBY,<br>
-        Jawa Timur 60115
-      </p>
-        <!-- Google Maps Embed -->
-      <div class="map-container" style="margin-top:1rem; border-radius:1rem; overflow:hidden;">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.012194581693!2d112.75208797499678!3d-7.275591971244889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fa11c09e2e27%3A0x5ce9d3f4042afe7b!2sUniversitas%20Airlangga%20-%20Kampus%20B!5e0!3m2!1sid!2sid!4v1697441234567!5m2!1sid!2sid" 
-          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+  <!-- Contact -->
+<section id="contact" class="section-pad relative">
+  <div class="max-w-7xl mx-auto px-6 lg:px-8">
+    <div class="grid lg:grid-cols-2 gap-10 items-center">
+      <!-- Map -->
+      <div class="reveal-up">
+        <div class="rounded-2xl overflow-hidden shadow-2xl border border-white/10">
+          <iframe
+            title="Lokasi Universitas Airlangga Kampus B"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.0202126879776!2d112.75123407480827!3d-7.860137792153144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf63d16a91b%3A0x2877f2b19f7a1b77!2sUniversitas%20Airlangga%20Kampus%20B!5e0!3m2!1sid!2sid!4v1735443293910!5m2!1sid!2sid"
+            width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
+
+      <!-- Info -->
+      <div class="reveal-up delay-1">
+        <h2 class="section-title !text-left">Hubungi Kami</h2>
+        <p class="text-gray-200/90 mt-2">Pesan untuk arisan, acara kantor, atau camilan keluarga.</p>
+
+        <div class="mt-6 space-y-4 text-white/90">
+          <div class="flex items-start gap-3">
+            <i class="fa-solid fa-location-dot mt-1 text-amber-300"></i>
+            <p>Universitas Airlangga Kampus B<br>
+               Jl. Airlangga No.4 - 6, Airlangga, Kec. Gubeng,<br>
+               Kota SBY, Jawa Timur 60115</p>
+          </div>
+          <div class="flex items-start gap-3">
+            <i class="fa-brands fa-whatsapp mt-1 text-emerald-300"></i>
+            <p>+62 822-3042-5429</p>
+          </div>
+          <div class="flex items-start gap-3">
+            <i class="fa-regular fa-clock mt-1 text-rose-300"></i>
+            <p>Setiap Hari: 08.00–20.00 WIB</p>
+          </div>
         </div>
 
-        <!-- Info -->
-        <div class="reveal-up delay-1">
-          <h2 class="section-title !text-left">Hubungi Kami</h2>
-          <p class="text-gray-200/90 mt-2">Pesan untuk arisan, acara kantor, atau camilan keluarga.</p>
-
-          <div class="mt-6 space-y-4 text-white/90">
-            <div class="flex items-start gap-3">
-              <i class="fa-solid fa-location-dot mt-1 text-amber-300"></i>
-              <p>Jl. Sudirman No. 45, Banyuwangi, Jawa Timur 68400</p>
-            </div>
-            <div class="flex items-start gap-3">
-              <i class="fa-brands fa-whatsapp mt-1 text-emerald-300"></i>
-              <p>+62 822-3042-5429</p>
-            </div>
-            <div class="flex items-start gap-3">
-              <i class="fa-regular fa-clock mt-1 text-rose-300"></i>
-              <p>Setiap Hari: 08.00–20.00 WIB</p>
-            </div>
-          </div>
-
-          <div class="mt-6 flex items-center gap-4">
-            <a class="btn-glow" target="_blank"
-               href="https://wa.me/6282230425429?text=Halo,%20saya%20mau%20pesan%20Tahu%20Walik">
-              <i class="fa-brands fa-whatsapp mr-2"></i> Pesan via WhatsApp
-            </a>
-            <a href="#" class="social-btn" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#" class="social-btn" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#" class="social-btn" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
-          </div>
+        <div class="mt-6 flex items-center gap-4">
+          <a class="btn-glow" target="_blank"
+             href="https://wa.me/6282230425429?text=Halo,%20saya%20mau%20pesan%20Tahu%20Walik">
+            <i class="fa-brands fa-whatsapp mr-2"></i> Pesan via WhatsApp
+          </a>
+          <a href="#" class="social-btn" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" class="social-btn" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" class="social-btn" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="border-t border-white/10 py-8 text-center text-white/70">
@@ -257,4 +252,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
