--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="rounded-2xl overflow-hidden shadow-2xl border border-white/10">
           <iframe
             title="Lokasi Universitas Airlangga Kampus B"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.0202126879776!2d112.75123407480827!3d-7.860137792153144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf63d16a91b%3A0x2877f2b19f7a1b77!2sUniversitas%20Airlangga%20Kampus%20B!5e0!3m2!1sid!2sid!4v1735443293910!5m2!1sid!2sid"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7915.4502547734355!2d112.7491788935791!3d-7.272087199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbd38ea51a2f%3A0x2640d21feb8c9fd8!2sUniversitas%20Airlangga%20-%20Campus%20B!5e0!3m2!1sen!2sus!4v1756458350356!5m2!1sen!2sus"
             width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -252,3 +252,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
