--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tahu Walik — Gurih & Krispi | Cemilan Khas Banyuwangi</title>
-  <meta name="description" content="Tahu Walik gurih & krispi dengan isian melimpah. Fresh digoreng! Pesan via WhatsApp.">
-  <meta name="keywords" content="tahu walik, banyuwangi, camilan, gorengan, pedas, keju">
+  <meta name="description" content="Tahu Walik gurih & krispi dengan isian melimpah. Fresh digoreng! Pesan via WhatsApp. Atau bisa datang langsung ke UNAIR Kampus B.">
+  <meta name="keywords" content="tahu walik, banyuwangi, camilan, gorengan, pedas">
   <!-- Open Graph -->
   <meta property="og:title" content="Tahu Walik — Gurih & Krispi" />
-  <meta property="og:description" content="Cemilan khas Banyuwangi. Fresh digoreng, gurih & krispi. Pesan via WhatsApp!" />
+  <meta property="og:description" content="Cemilan khas Banyuwangi. Fresh digoreng, gurih & krispi. Pesan via WhatsApp! atau bisa datang langsung ke PDB11" />
   <meta property="og:image" content="https://images.unsplash.com/photo-1606756790138-bb9d5bfc2a7d?auto=format&fit=crop&w=1200&q=80" />
   <meta property="og:type" content="website" />
 
@@ -73,7 +73,7 @@
         Tahu Walik <span class="text-amber-300">Gurih</span> & <span class="text-rose-300">Krispi</span>
       </h1>
       <p class="mt-5 text-lg md:text-xl text-white/90 max-w-2xl mx-auto reveal-up delay-1">
-        Fresh digoreng saat dipesan. Kulit super kriuk, isian melimpah. Siap jadi camilan favoritmu!
+        Fresh digoreng saat dipesan. Kulit super kriuk. Siap jadi camilan favoritmu!
       </p>
       <div class="mt-8 flex items-center justify-center gap-4 reveal-up delay-2">
         <a href="#menu" class="btn-glow">
@@ -163,19 +163,19 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="testi-card">
-              <p>“Kriuk di luar, lembut di dalam. Langganan tiap minggu!”</p>
+              <p>“Kriuk di luar, lembut di dalam.”</p>
               <span class="author">— Budi Santoso</span>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="testi-card">
-              <p>“Yang pedas bikin nagih. Pengantaran cepat & masih hangat.”</p>
+              <p>“Yang pedas bikin nagih.”</p>
               <span class="author">— Siti Rahayu</span>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="testi-card">
-              <p>“Texturenya perfect. Recommended banget untuk camilan keluarga.”</p>
+              <p>“Texturenya perfect. Recommended banget untuk camilan ketika kuliah.”</p>
               <span class="author">— Ahmad Rizki</span>
             </div>
           </div>
@@ -218,7 +218,7 @@
           </div>
           <div class="flex items-start gap-3">
             <i class="fa-regular fa-clock mt-1 text-rose-300"></i>
-            <p>Setiap Hari: 08.00–20.00 WIB</p>
+            <p>Hari Kuliah: 08.00–12.00 WIB</p>
           </div>
         </div>
 
@@ -252,4 +252,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
