--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <!-- Info -->
       <div class="reveal-up delay-1">
         <h2 class="section-title !text-left">Hubungi Kami</h2>
-        <p class="text-gray-200/90 mt-2">Pesan untuk arisan, acara kantor, atau camilan keluarga.</p>
+        <p class="text-gray-200/90 mt-2">Pesan untuk cemilan kalian ketika kuliah.</p>
 
         <div class="mt-6 space-y-4 text-white/90">
           <div class="flex items-start gap-3">
@@ -252,5 +252,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
