--- a/index.html
+++ b/index.html
@@ -227,9 +227,12 @@
              href="https://wa.me/6282230425429?text=Halo,%20saya%20mau%20pesan%20Tahu%20Walik">
             <i class="fa-brands fa-whatsapp mr-2"></i> Pesan via WhatsApp
           </a>
-          <a href="#" class="social-btn" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" class="social-btn" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" class="social-btn" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/kam_apalah" 
+           target="_blank" 
+           class="social-btn" 
+           aria-label="Instagram">
+           <i class="fa-brands fa-instagram"></i>
+          </a>
         </div>
       </div>
     </div>
@@ -252,6 +255,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
